Adapt download WOT logic to include both UUID4 file_id and accession
